3.4/mule-user-guide/datamapper-input-error-policy-for-bad-input-data.adoc
= DataMapper Input Error Policy: Handling Bad Input Data

To handle the possibility of bad input data (such as input data that does not comply with the actual types specified in the DataMapper metadata), Anypoint DataMapper provides an Error Policy property for all input object types. Use this to set the tolerance level for bad input data, and how to handle it when it is found.

The available policies include:

[width="100%",cols=",",options="header"]
|===
|Policy |Description
|*Strict* (default) |If an input error is found, stop parsing input data and abort further processing.
|*Controlled* |Count input errors, log details about the error, skip the field that contains the error. Continue processing, until the count of errors exceeds the user-configured Max error count property. Note that the default value of zero means unlimited errors will be tolerated and logged.
|*Lenient* |Skip the field that contains the error; do not log details about the error; and continue to process any remaining records.
|===

== Setting Input Error Policy

The input Error Policy can only be set from the Input properties dialog from the DataMapper Mapping View. This option is not specified during initial creation of input metadata.

All of the different input types have an Error Policy field in their respective Properties dialogs. For example, see Error Policy in the CSV properties dialog:

image:/docs/download/attachments/95393444/screenshot_99.png?version=1&modificationDate=1374598589081[image]
