3.6/mule-user-guide/datamapper-input-error-policy-for-bad-input-data.adoc
= DataMapper Input Error Policy for Bad Input Data
:keywords: datamapper

[NOTE]
DataMapper will continue to be fully supported in all current and future versions of Mule ESB 3.x, however it will be removed in Mule 4.0. We recommend that if you wish to take advantage of the new capabilities of link:https://developer.mulesoft.com/docs/display/current/DataWeave[DataWeave] or if you start new projects, upgrade now. However, if you have no pressing need to take advantage of new functionality, we recommend you wait until Mule 4.0 is released.

To handle the possibility of bad input data (such as input data that does not comply with the actual types specified in the DataMapper metadata), Anypoint DataMapper provides an Error Policy property for all input object types. Use this to set the tolerance level for bad input data, and how to handle it when it is found. 

The available policies include:

[width="100%",cols=",",options="header"]
|===
|Policy |Description
|*Strict* (default) |If an input error is found, stop parsing input data and abort further processing.
|*Controlled* |Count input errors, log details about the error, skip the field that contains the error. Continue processing, until the count of errors exceeds the user-configured Max error count property. Note that the default value of zero means unlimited errors will be tolerated and logged.
|*Lenient* |Skip the field that contains the error; do not log details about the error; and continue to process any remaining records.
|===

== Setting Input Error Policy

The input Error Policy can only be set from the Input properties dialog from the DataMapper Mapping View. This option is not specified during initial creation of input metadata. 

All of the different input types have an Error Policy field in their respective Properties dialogs. For example, see Error Policy in the CSV properties dialog:

image:/documentation/download/attachments/122752177/csv_properties.png?version=1&modificationDate=1398985183695[image]
